2003-11-10  Ethan Merritt <merritt@u.washington.edu>

	* src/color.c: Don't try to set color of non-supporting terminals.

2003-11-06  Ethan Merritt <merritt@u.washington.edu>

	* configure.in, term/pdf.trm:  Test for and accommodate older
	versions of pdflib.

2003-11-01  Ethan Merritt <merritt@u.washington.edu>

	* term/x11.trm: Do not use %lg to printf doubles. Some compilers
	complain because it is not strict ANSIC.

2003-10-31  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/x11.trm src/gplt_x11.c: Added  #ifdef PIPE_IPC  where missing
	(fixes compiling X11 terminal on OS/2).

2003-10-27  Ethan Merritt <merritt@u.washington.edu>

	* demo/*.dem: Replace deprecated syntax in demos with current
	preferred syntax.

2003-10-23  Ethan Merritt <merritt@u.washington.edu>

	* term/x11.trm: Add a soft lock on the mousing pipe so that input
	from stdin is delayed until completion of a query/response operation
	over the mousing pipe.  This fixes the problem of input characters
	being lost when stdin is fast (e.g. a script) and the X11 response
	is slow. It does *not* fix the problem with unbuffered input being
	lost, e.g. from awk scripts.
	
2003-10-22  Petr Mikulik  <mikulik@physics.muni.cz> 

	* src/set.c reset_palette(): Added missing reset of variable
	pm3d_last_set_palette_mode. Bugfix by Daniel J Sebald.

2003-10-21  Ethan Merritt <merritt@u.washington.edu>

	* src/specfun.c: Fix reported bug #826811. The inverse_error_func()
	code to perform Newton-Raphson improvement was incorrectly nested
	so that it was only invoked in 1 of 3 range cases. Also empirical
	testing indicated that a 3rd cycle of Newton-Raphson was needed.

2003-10-21  Petr Mikulik  <mikulik@physics.muni.cz> 

	Changes allowing to save gnuplot session to a pipe, for example
	save "|cat >a.gp".

	* docs/gnuplot.doc: Documentation update.

        * src/command.c capture_filename_and_pfopen(): New routine, like
        CAPTURE_FILENAME_AND_FOPEN but with popen() in addition.
