@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: getcolor.c,v 1.12 2002/08/30 18:45:45 mikulik Exp $"); }
+static char *RCSid() { return RCSid("$Id: getcolor.c,v 1.13 2003/09/08 12:56:00 broeker Exp $"); }
 #endif
 
 /* GNUPLOT - getcolor.c */
@@ -273,10 +273,14 @@ void color_components_from_gray( double gray, rgb_color *color )
 }
 
 /*
- *  Map a gray value in [0,1] to the corresponding RGB values,
+ *  Map a gray value in [0,1] to the corresponding RGB values in [0,1],
  *  according to the current colorMode and color space.
+ *
+ *  Note -- November 2003: this routine has been renamed from color_from_gray()
+ *  to rgb1_from_gray() in order to more clearly distinguish structures
+ *  rgb_color and rgb255_color.
  */
-void color_from_gray( double gray, rgb_color *color )
+void rgb1_from_gray( double gray, rgb_color *color )
 {
     /* get the color */
     color_components_from_gray( gray, color );
@@ -297,16 +301,24 @@ void color_from_gray( double gray, rgb_color *color )
 
 
 /*  
- *  Convinience function to map gray values to R, G and B values in [0,255] 
+ *  Convenience function to map R, G and B float values [0,1] to uchars [0,255].
  */
-void rgb_from_gray( double gray, 
-		   unsigned char *r, unsigned char *g, unsigned char *b )
+void rgb255_from_rgb1( rgb_color rgb1, rgb255_color *rgb255 )
 {
-    rgb_color color;
-    color_from_gray( gray, &color );
-    *r = 255 * color.r + 0.5;
-    *g = 255 * color.g + 0.5;
-    *b = 255 * color.b + 0.5;
+    rgb255->r = (unsigned char)(255 * rgb1.r + 0.5);
+    rgb255->g = (unsigned char)(255 * rgb1.g + 0.5);
+    rgb255->b = (unsigned char)(255 * rgb1.b + 0.5);
+}
+
+
+/*  
+ *  Convenience function to map gray values to R, G and B values in [0,255].
+ */
+void rgb255_from_gray( double gray, rgb255_color *rgb255 )
+{
+    rgb_color rgb1;
+    rgb1_from_gray(gray, &rgb1);
+    rgb255_from_rgb1(rgb1, rgb255);
 }
 
 
