@@ -1,5 +1,5 @@
 /*
- * $Id: getcolor.h,v 1.3 2002/02/25 03:10:41 broeker Exp $
+ * $Id: getcolor.h,v 1.4 2002/08/30 18:45:45 mikulik Exp $
  */
 
 /* GNUPLOT - getcolor.h */
@@ -38,10 +38,12 @@ enum color_models_id {
 
 /* main gray --> color mapping */
 void color_components_from_gray __PROTO(( double gray, rgb_color *color ));
-void color_from_gray __PROTO(( double gray, rgb_color *color ));
-void rgb_from_gray __PROTO(( double gray, unsigned char *r, unsigned char *g, unsigned char *b ));
+/* main gray --> rgb color mapping */
+void rgb1_from_gray __PROTO(( double gray, rgb_color *color ));
+void rgb255_from_rgb1 __PROTO(( rgb_color rgb1, rgb255_color *rgb255 ));
+void rgb255_from_gray __PROTO(( double gray, rgb255_color *rgb255 ));
 
-/* used by x11.trm to avoid 'set palet funct R(g),G(g),B(g)' problems */
+/* used by x11.trm to avoid 'set palette funct R(g),G(g),B(g)' problems */
 int calculate_color_from_formulae __PROTO(( double, rgb_color * ));
 
 /* used to (de-)serialize color/gradient information */
